--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "vue": "1.0.26",
     "vue-resource": "^0.9.3",
     "vue-router": "0.7.11",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "font-awesome-sass": "^4.7.0"
   },
   "license": "MIT",
   "private": true,
